--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+    font-family: "Montserrat", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar {
+    width: 2px;
+}
+
+::-webkit-scrollbar-track {
+   background-color: #0A192F;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #02354d;
+    border-radius: 10px;
+}
+i{
+    cursor: pointer;
+    font-size: 24px;
+}
+i:hover{
+    color: white ;
+
+}
+#whatsapp:hover{
+    color:#00c24f
+}
+#linkedin:hover{
+    color: #0068c2;
+}
+.s{
+    animation: s 1s infinite;
+}
+@keyframes s{
+    0%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100%{
+        opacity: 0.5;
+    }
+}
+.m{
+    animation: m 1s infinite;
+}
+@keyframes m{
+    0%{
+        opacity: 0.5;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0.5;
+    }
 }
